--- a/templates/starter.html
+++ b/templates/starter.html
@@ -7,93 +7,94 @@
         To register an account, please fill in the data.
       </p>
 
-      <div class="field">
-        <label class="label">First and Last Name</label>
-        <div class="control">
-          <input class="input" type="text" placeholder="type your name">
-        </div>
-      </div>
-      
-      <div class="field">
-        <label class="label">Age</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input is-success" type="text" placeholder="Text input" value="type a number">
-          <span class="icon is-small is-left">
-            <i class="fas fa-user"></i>
-          </span>
-          <span class="icon is-small is-right">
-            <i class="fas fa-check"></i>
-          </span>
-        </div>
-      </div>
-      
-      <div class="field">
-        <label class="label">Email</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
-          <span class="icon is-small is-left">
-            <i class="fas fa-envelope"></i>
-          </span>
-          <span class="icon is-small is-right">
-            <i class="fas fa-exclamation-triangle"></i>
-          </span>
-        </div>
-        <p class="help is-danger">This email is invalid</p>
-      </div>
-      
-      <div class="field">
-        <label class="label">Field of Expertise</label>
-        <div class="control">
-          <div class="select">
-            <select>
-              <option>Psychoanalysis and psychodynamic therapies</option>
-              <option>Behavior therapy</option>
-              <option>Cognitive therapy</option>
-              <option>Humanistic therapy (client-centered, gestalt, existential)</option>
-              <option>Integrative therapy</option>
-            </select>
+      <form action="/create" method="POST">
+        <div class="field">
+          <label class="label">First and Last Name</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="type your name">
           </div>
         </div>
-      </div>
-      
-      <div class="field">
-        <label class="label">About Me</label>
-        <div class="control">
-          <textarea class="textarea" placeholder="type here"></textarea>
+        
+        <div class="field">
+          <label class="label">Age</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-success" type="text" placeholder="Text input" value="type a number">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+            <span class="icon is-small is-right">
+              <i class="fas fa-check"></i>
+            </span>
+          </div>
         </div>
-      </div>
-      
-      <div class="field">
-        <div class="control">
-          <label class="checkbox">
-            <input type="checkbox">
-            I agree to the <a href="#">terms and conditions</a>
-          </label>
+        
+        <div class="field">
+          <label class="label">Email</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+            <span class="icon is-small is-left">
+              <i class="fas fa-envelope"></i>
+            </span>
+            <span class="icon is-small is-right">
+              <i class="fas fa-exclamation-triangle"></i>
+            </span>
+          </div>
+          <p class="help is-danger">This email is invalid</p>
         </div>
-      </div>
-      
-      <div class="field">
-        <div class="control">
-          <label class="radio">
-            <input type="radio" name="question">
-            Yes
-          </label>
-          <label class="radio">
-            <input type="radio" name="question">
-            No
-          </label>
+        
+        <div class="field">
+          <label class="label">Field of Expertise</label>
+          <div class="control">
+            <div class="select">
+              <select>
+                <option>Psychoanalysis and psychodynamic therapies</option>
+                <option>Behavior therapy</option>
+                <option>Cognitive therapy</option>
+                <option>Humanistic therapy (client-centered, gestalt, existential)</option>
+                <option>Integrative therapy</option>
+              </select>
+            </div>
+          </div>
         </div>
-      </div>
-      
-      <div class="field is-grouped">
-        <div class="control">
-          <button class="button is-link">Submit</button>
+        
+        <div class="field">
+          <label class="label">About Me</label>
+          <div class="control">
+            <textarea class="textarea" name="about-content" placeholder="type here"></textarea>
+          </div>
         </div>
-        <div class="control">
-          <button class="button is-link is-light">Cancel</button>
+        
+        <div class="field">
+          <div class="control">
+            <label class="checkbox">
+              <input type="checkbox">
+              I agree to the <a href="#">terms and conditions</a>
+            </label>
+          </div>
         </div>
-      </div>
-
+        
+        <div class="field">
+          <div class="control">
+            <label class="radio">
+              <input type="radio" name="question">
+              Yes
+            </label>
+            <label class="radio">
+              <input type="radio" name="question">
+              No
+            </label>
+          </div>
+        </div>
+        
+        <div class="field is-grouped">
+          <div class="control">
+            <button class="button is-link">Submit</button>
+          </div>
+          <div class="control">
+            <button class="button is-link is-light">Cancel</button>
+          </div>
+        </div>
+      </form>
     </div>
 
  {% endblock %}
