--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     <nav class="navbar is-info" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <a class="navbar-item has-text-weight-bold is-size-4 is-italic" href="{{url_for('register')}}">
+          <a class="navbar-item has-text-weight-bold is-size-4 is-italic" href="{{url_for('welcome')}}">
            theraflow
           </a>
           {% if user %}
