--- a/templates/starter.html
+++ b/templates/starter.html
@@ -7,6 +7,18 @@
         To register an account, please fill in the data.
       </p>
 
+      <form method="POST" action="{{url_for('starter')}}">
+        <table>
+        {% for field in form %}
+            <tr>
+                <th>{{ field.label }}</th>
+                <td>{{ field }}</td>
+            </tr>
+        {% endfor %}    
+        </table>
+      </form>
+
+
       <form action="/create" method="POST">
         <div class="field">
           <label class="label">First and Last Name</label>
