--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 <html>
     <body>
 
+        <h1> Log In </h1>
         <form method="POST" action="{{url_for('login')}}">
             <table>
             {% for field in form %}
@@ -12,5 +13,44 @@
             </table>
         </form>
 
+        <h1> Reset Password </h1>
+        <form method="POST" action="{{url_for('reset_password')}}">
+            <table>
+            {% for field in reset_password_form %}
+                <tr>
+                    <th>{{ field.label }}</th>
+                    <td>{{ field }}</td>
+                </tr>
+            {% endfor %}    
+            </table>
+        </form>
+
 </body>
 </html>
+
+<form method="POST" action="{{url_for('login')}}">
+    {{ form.csrf_token }}
+    <div class="field">
+        <p class="control has-icons-left">
+            {{ form.email(class="input",placeholder="Email") }}
+            <span class="icon is-small is-left">
+                <i class="fas fa-envelope"></i>
+            </span>
+       </p>
+    </div>
+    <div class="field">
+        <p class="control has-icons-left">
+            {{ form.password(class="input",placeholder="Password") }}
+            <span class="icon is-small is-left">
+                <i class="fas fa-lock"></i>
+            </span>
+        </p>
+    </div>
+    <div class="field">
+        <p class="control">
+            <button class="button is-success">
+                Log in
+            </button>
+        </p>
+    </div>
+  </form>
